# sarif-reviewer

./: .gitignore  LICENSE  README.md  pyproject.toml
sarif_reviewer/: __main__.py  analyzer.py  config.py  context_parser.py  logging.py  sarif.py
