[project]
name = "sarif-reviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sarif-pydantic>=0.5.3",
    "tree-sitter>=0.25.1",
    "tree-sitter-bash>=0.25.0",
    "tree-sitter-c>=0.24.1",
    "tree-sitter-c-sharp>=0.23.1",
    "tree-sitter-commonlisp>=0.4.1",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-css>=0.23.2",
    "tree-sitter-elixir>=0.3.4",
    "tree-sitter-embedded-template>=0.25.0",
    "tree-sitter-fortran>=0.5.1",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-haskell>=0.23.1",
    "tree-sitter-hcl>=1.2.0",
    "tree-sitter-html>=0.23.2",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-jsdoc>=0.23.2",
    "tree-sitter-json>=0.24.8",
    "tree-sitter-julia>=0.23.1",
    "tree-sitter-kotlin>=1.1.0",
    "tree-sitter-lua>=0.2.0",
    "tree-sitter-make>=1.1.1",
    "tree-sitter-markdown>=0.3.2",
    "tree-sitter-objc>=3.0.2",
    "tree-sitter-ocaml>=0.24.2",
    "tree-sitter-php>=0.24.1",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-ql>=0.23.1",
    "tree-sitter-regex>=0.24.3",
    "tree-sitter-rst>=0.2.0",
    "tree-sitter-ruby>=0.23.1",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-scala>=0.24.0",
    "tree-sitter-sql>=0.3.8",
    "tree-sitter-toml>=0.7.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-yaml>=0.7.1",
]
